[package]
name = "juniper-from-schema-helpers"
version = "0.1.0"
authors = ["David Pedersen <david.pdrsn@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.5"
quote = "1.0.2"
proc-macro2 = "1.0.5"

[dev_dependencies]
juniper-from-schema = "0.4.0"
trybuild = "1.0.16"
juniper = "0.14.0"

[lib]
proc-macro = true
path = "src/lib.rs"
